--- a/pages/swipeTab/swipeTab.wxml
+++ b/pages/swipeTab/swipeTab.wxml
@@ -9,7 +9,7 @@
       <view style="width: {{tab_config.item_width}}px; left: {{tab_config.underline.offset}}px;"
             class="under-line withAnimate"></view>
     </view>
-    <scroll-view wx:else class="scroll-view_H tab-bar" scroll-x="true" bindscroll="onScroll" style="width: 100%;"
+    <scroll-view wx:else class="tab-bar" scroll-x="true" bindscroll="onScroll" style="width: 100%;"
                  scroll-left="{{tab_config.tab_left}}">
       <view wx:for="{{tab_config.tabs}}" wx:key="unique" data-index="{{index}}" bindtap="handlerTabTap"
             class="tab {{tab_config.active_tab==index?'tab-active':''}} " style="width: {{tab_config.item_width}}px;">
